@@ -1395,7 +1395,7 @@
       (message
        "** WARNING: epacakge.el has not been designed to work with XEmacs")))
 
-(defconst epackage--version-time "2012.0105.0908"
+(defconst epackage--version-time "2012.0105.1036"
   "Package's version number in format YYYY.MMDD.HHMM.")
 
 (defconst epackage--maintainer "jari.aalto@cante.net"
@@ -6670,7 +6670,7 @@ Return:
   (lm-verify (not 'file) (not 'showok) (not 'verbose) 'non-fsf-ok)
   ;; Run extras, see checkdoc-file-comments-engine
   (unless (lm-summary)
-    (message "Missing: ;;; package --- Summary"))
+    (message "Missing: ;;; <package> --- <Summary>"))
   (unless (lm-copyright-mark)
     (message "Missing: ;; Copyright (C) YYYY First Last <address@example.com>"))
   (unless (lm-header "Maintainer")
@@ -6693,6 +6693,9 @@ Return:
     (message "Missing: ;;; History:"))
   (unless (lm-code-start)
     (message "Missing: ;;; Code:"))
+  (goto-char (point-max))
+  (unless (re-search-backward "^;; .+\\.el ends here" nil t)
+    (message "Missing: ;;; <package>.el ends here"))
   ;; FIXME: Require order
   ;; http://www.gnu.org/software/emacs/manual/html_mono/elisp.html#Library-Headers
   (message (epackage-lint-extra-delimiter-string "lm-verify" 'stop))
